--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;700;900&display=swap");
 
 * {
   margin: 0;
@@ -12,7 +12,96 @@ p.announcment_bar {
   font-weight: 900 !important;
   font-size: 12px;
   padding: 10px 20px;
-  border: 1px solid grey;
   text-align: center;
   letter-spacing: 1.5px;
+}
+
+.navbar {
+  border-top: 1px solid grey;
+  border-bottom: 1px solid grey;
+}
+.container {
+  max-width: 70%;
+  margin: 0 auto;
+}
+.header-top {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.header-top .brand-image img {
+  width: 50px;
+  height: 40px;
+  padding: 20px 50px 0;
+}
+
+.navbar ul {
+  width: fit-content;
+  list-style: none;
+  text-transform: uppercase;
+  display: flex;
+  margin: 0 auto;
+  margin-top: 10px;
+}
+
+.navbar ul li {
+  padding: 14px;
+}
+.navbar ul a {
+  font-size: 14px;
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+.navbar i {
+  font-size: 20px;
+}
+
+.options a {
+  color: black;
+  transform: scale(1);
+}
+.options .fa-user {
+  margin-right: 10px;
+}
+
+.options a:hover i {
+  transition: transform 0.2s ease-in-out;
+  transform: scale(1.2);
+}
+
+.show-case {
+  position: relative;
+  margin-top: 40px;
+  height: 75vh;
+}
+.show-case video {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+}
+
+.show-case .text {
+  text-align: center;
+  margin-bottom: 20px;
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  background-color: rgba(0, 0, 0, 0.3);
+  padding: 12px;
+}
+.show-case .text h1 {
+  font-size: 70px;
+  margin-bottom: 5px;
+  font-weight: 700;
+  color: white;
+}
+
+.show-case .text p {
+  color: white;
+  font-size: 22px;
+  font-weight: 400;
 }
