--- a/style.css
+++ b/style.css
@@ -17,8 +17,8 @@ p.announcment_bar {
 }
 
 .navbar {
-  border-top: 1px solid grey;
-  border-bottom: 1px solid grey;
+  border-top: 1px solid #c4c4c4;
+  border-bottom: 1px solid #c4c4c4;
 }
 .container {
   max-width: 70%;
@@ -104,4 +104,8 @@ p.announcment_bar {
   color: white;
   font-size: 22px;
   font-weight: 400;
+}
+
+.navbar ul li:hover a {
+  border-bottom: 1px solid black;
 }
